# C0D3-Bot

./: Cargo.toml  Dockerfile  compose.yml  flake.nix  update.sh
.github/workflows/: docker_build.yaml
src/: Client.rs  Logger.rs  Result.rs  client.rs  constants.rs  logger.rs  main.rs  message.rs
