[package]
name = "c0d3-bot"
version = "0.1.1"
authors = ["C0D3 M4513R <28912031+C0D3-M4513R@users.noreply.github.com>"]
edition = "2021"
#include = ["src/**"]
#include = ["test/**"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#.env support
dotenv = "0.15"
#logging
tracing = {version = "0.1", features = ["attributes"]}
tracing-attributes = "0.1"
tracing-subscriber = "0.3"

#eaze-tracing-honeycomb = "0.2.1-eaze.7"
#libhoney-rust = "0.1.6"

serde = "1"
serde_derive = "1"
serde_json = "1"
#bot
serenity = { version = "0.12.4", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
poise = {git = "https://github.com/serenity-rs/poise", rev = "81f6da4dcfc16627c77112873d7b3389ee99515f"}
#async main
tokio = { version = "^1.4", features = ["macros", "signal", "rt-multi-thread"] }